--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -710,4 +710,25 @@ nav.navbar.bootsnav .navbar-toggle i{color: #4e4ffa;}
     0%   {bottom:0px;}
     100%  {bottom:7px;}
 }
+.profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
+.profile-avatar img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 2px solid #333;
+}
+
+.profile-info {
+    text-align: center;
+    font-size: 18px;
+}
+
+
+
 /*========================Thank you=================
