--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,13 +60,35 @@
                                 <li class="scroll"><a href="#brand">brands</a></li>
                                 <li class="scroll"><a href="#contact">contact</a></li>
 
-                                {# Boutons Connexion / Inscription / Déconnexion #}
-                                {% if app.user %}
-                                    <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
-                                {% else %}
-                                    <li><a href="{{ path('app_login') }}">Connexion</a></li>
-                                    <li><a href="{{ path('app_register') }}">Inscription</a></li>
-                                {% endif %}
+                              {# Boutons Connexion / Inscription / Déconnexion #}
+				{% if app.user %}
+				    <li class="nav-item">
+					<a class="nav-link profile-link" href="{{ path('app_profile') }}">
+					    <div style="display: flex; flex-direction: column; align-items: center;">
+						<img src="{{ asset(app.user.profileImage ? 'uploads/profile_images/' ~ app.user.profileImage : 'assets/images/profile.png') }}"
+						     alt="Profil"
+						     style="
+						       width:50px !important;
+						       height:50px !important;
+						       max-width:none !important;
+						       max-height:none !important;
+						       border-radius:50% !important;
+						       object-fit:cover !important;
+						     ">
+
+						<span style="font-size: 12px; color: inherit;">Profil</span>
+					    </div>
+					</a>
+				    </li>
+				    <li class="nav-item">
+					<a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+				    </li>
+				{% else %}
+				    <li><a href="{{ path('app_login') }}">Connexion</a></li>
+				    <li><a href="{{ path('app_register') }}">Inscription</a></li>
+				{% endif %}
+
+
                             </ul>
                         </div>
                     </div>
