Bug sur les connexions, l'inscription et la photo de profil corrigé

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,7 +1,8 @@
 {# templates/home.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}CarVilla - Home{% endblock %}
+{% block title %}Prékar - Home{% endblock %}
+
 
 {% block body %}
     <!-- ==================== WELCOME-HERO (HOME) ==================== -->
@@ -9,12 +10,12 @@
         <!-- On ne remet pas la navbar, elle est déjà dans base.html.twig -->
         <div class="container">
             <div class="welcome-hero-txt">
-                <h2>get your desired car in resonable price</h2>
+                <h2>Louez la voiture de vos rêves en toute simplicité !</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.
+                    Envie de liberté sur la route ? Découvrez notre large gamme de véhicules modernes et confortables à des prix imbattables.  
+                    Que ce soit pour un week-end, un voyage d’affaires ou des vacances inoubliables, trouvez la voiture parfaite et partez l’esprit léger !
                 </p>
-                <button class="welcome-btn" onclick="window.location.href='#'">contact us</button>
+                <button class="welcome-btn" onclick="window.location.href='#'">Réservez dès maintenant</button>
             </div>
         </div>
 
