--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>{% block title %}CarVilla{% endblock %}</title>
+        <title>{% block title %}Prékar{% endblock %}</title>
 
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/icon" href="{{ asset('assets/logo/favicon.png') }}"/>
@@ -45,7 +45,7 @@
                                 <i class="fa fa-bars"></i>
                             </button>
                             <a class="navbar-brand" href="{{ path('homepage') }}">
-                                carvilla<span></span>
+                                prékar<span></span>
                             </a>
                         </div>
                         <!-- End Header Navigation -->
@@ -75,8 +75,6 @@
 						       border-radius:50% !important;
 						       object-fit:cover !important;
 						     ">
-
-						<span style="font-size: 12px; color: inherit;">Profil</span>
 					    </div>
 					</a>
 				    </li>
@@ -109,7 +107,7 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="single-footer-widget">
                                 <div class="footer-logo">
-                                    <a href="{{ path('homepage') }}">carvilla</a>
+                                    <a href="{{ path('homepage') }}">prékar</a>
                                 </div>
                                 <p>
                                     Ased do eiusm tempor incidi ut labore et dolore magnaian aliqua. 
