--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,7 +56,7 @@
                                 <li class="scroll active"><a href="#home">home</a></li>
                                 <li class="scroll"><a href="#service">service</a></li>
                                 <li class="scroll"><a href="#featured-cars">featured cars</a></li>
-                                <li class="scroll"><a href="#new-cars">new cars</a></li>
+                                <li class="scroll"><a href="#deposer-offre">Déposer un offre</a></li>
                                 <li class="scroll"><a href="#brand">brands</a></li>
                                 <li class="scroll"><a href="#contact">contact</a></li>
 
