--- a/templates/offre/deposer.html.twig
+++ b/templates/offre/deposer.html.twig
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="{{ asset('assets/css/deposer.css') }}">
 </head>
 <body>
-
 <div class="container">
+    {# Affichage des messages flash #}
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+
     {# Fil d’Ariane (breadcrumb) #}
     <nav class="breadcrumb">
         <a href="{{ path('homepage') }}">Accueil</a> &gt; Déposer une Offre
@@ -29,15 +37,13 @@
         <div class="form-group">
             <div class="form-field">
                 <label for="marque">Marque</label>
-                <input list="liste-marques"
-                       id="marque"
-                       {{ form_widget(form.marque, {
-                           'id': 'marque',
-                           'attr': {
-                               'placeholder': 'Sélectionnez ou saisissez une marque',
-                               'list': 'liste-marques'
-                           }
-                       }) }}>
+                {{ form_widget(form.voiture.marque, {
+                    'id': 'marque',
+                    'attr': {
+                        'placeholder': 'Sélectionnez ou saisissez une marque',
+                        'list': 'liste-marques'
+                    }
+                }) }}
                 <datalist id="liste-marques">
                     <option value="Toyota">
                     <option value="Honda">
@@ -51,19 +57,19 @@
                 </datalist>
             </div>
             <div class="form-field">
-                {{ form_row(form.modele, {
+                {{ form_row(form.voiture.modele, {
                     'attr': {'placeholder': 'Ex: Clio, Golf, Corolla...'}
                 }) }}
             </div>
         </div>
         <div class="form-group">
             <div class="form-field">
-                {{ form_row(form.immatriculation, {
+                {{ form_row(form.voiture.immatriculation, {
                     'attr': {'placeholder': 'Ex: XX-123-XX'}
                 }) }}
             </div>
             <div class="form-field">
-                {{ form_row(form.annee, {
+                {{ form_row(form.voiture.annee, {
                     'attr': {
                         'placeholder': '2023',
                         'min': '1970',
@@ -74,19 +80,19 @@
         </div>
         <div class="form-group">
             <div class="form-field">
-                {{ form_row(form.nombrePlaces, {
+                {{ form_row(form.voiture.nombrePlaces, {
                     'attr': {'placeholder': 'Ex: 5', 'min': '1', 'max': '9'}
                 }) }}
             </div>
             <div class="form-field">
-                {{ form_row(form.volumeCoffre, {
+                {{ form_row(form.voiture.volumeCoffre, {
                     'attr': {'placeholder': 'Ex: 300 (L)'}
                 }) }}
             </div>
         </div>
         <div class="form-group">
             <div class="form-field">
-                {{ form_row(form.typeEssence) }}
+                {{ form_row(form.voiture.typeEssence) }}
             </div>
         </div>
     </div>
